# registry-full-stack

./: .gitignore  README.md  package.json
.parcel-cache/: 2032cb03f0689899  2a6a4658529ada4e  830cf903d9857f65  920080efd859b86d  ae3c784ff75076d8  cc5974dafacbce6a  e296b69555089cba.txt  lock.mdb
contract/: Cargo.toml
contract/bindings/: CellValue.ts  HeadCell.ts  Registry.ts  RowCell.ts
contract/src/: lib.rs  registry.rs  utils.rs  views.rs
frontend/: App.js
frontend/assets/js/near/: utils.js
