[package]
name = "registry"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uuid = { version = "1.1.2", features = ["serde", "v5"] }
ts-rs = "6.1"

[dependencies.serde]
version = "1"
features = ["derive"]





[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
